Apply Amy's feedback: simplify pages 4,7,8,9,10,12; remove metrics/risks (15-16); placeholder for page 11

--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@ tr:last-child td{border-bottom:none}
 <div class="slide slide-dark" id="slide-4">
   <div class="tag">The Insight</div>
   <div class="quote" style="margin-top:40px">
-    "The problem isn't finding properties.<br>It's finding trustworthy people on the other side."
+    "The problem is finding property listings that are updated and genuine, and finding trustworthy people on the other side."
   </div>
   <div class="grid-2" style="margin-top:48px">
     <div class="card">
       <h3>What exists today</h3>
-      <p style="font-size:1rem">International listing portals &mdash; Zillow, Juwai, Realtor.com &mdash; show you properties. But <em>who</em> is the agent? <em>Is</em> the escrow company legitimate? <em>Can you trust</em> the attorney across the border?</p>
-      <p style="font-size:1rem;margin-top:12px"><strong>Listings are easy. Trust is hard.</strong></p>
+      <p style="font-size:1rem">International listing portals &mdash; Zillow, Juwai, Realtor.com &mdash; show you property listings. But are the real estate professionals vetted?</p>
+      <p style="font-size:1.1rem;margin-top:16px"><strong>Listings are easy. Trust is hard.</strong></p>
     </div>
     <div class="card card-emerald">
       <h3>What's missing</h3>
@@ -241,7 +241,7 @@ tr:last-child td{border-bottom:none}
       <ul class="bullets">
         <li><span class="icon">🌏</span><div><strong>Pre-Qualified Foreign Buyers</strong><br><span style="font-size:0.95rem;opacity:0.8">Every buyer has passed KYC/AML and proof of funds. No tire-kickers, no fraud risk &mdash; real investors ready to transact.</span></div></li>
         <li><span class="icon">✅</span><div><strong>Verified Badge = Credibility</strong><br><span style="font-size:0.95rem;opacity:0.8">License verification, background checks, cross-border reviews. Your badge tells foreign buyers you're the real thing.</span></div></li>
-        <li><span class="icon">💲</span><div><strong>Set Your Own Rates</strong><br><span style="font-size:0.95rem;opacity:0.8">No platform-imposed pricing. List your services, set your fees, grow your cross-border practice on your terms.</span></div></li>
+        <li><span class="icon">💲</span><div><strong>Simple Subscription</strong><br><span style="font-size:0.95rem;opacity:0.8">No per-lead fees, no commissions. Predictable, transparent costs.</span></div></li>
       </ul>
     </div>
     <div>
@@ -267,8 +267,8 @@ tr:last-child td{border-bottom:none}
     <div>
       <ul class="bullets">
         <li><span class="icon">🔒</span><div><strong>Every Professional is Verified</strong><br><span style="font-size:0.95rem;opacity:0.8">License-checked, background-verified, reviewed by other cross-border buyers. No more guessing.</span></div></li>
-        <li><span class="icon">🗣️</span><div><strong>Work in Your Language</strong><br><span style="font-size:0.95rem;opacity:0.8">Find professionals who speak your language. Read contracts you actually understand.</span></div></li>
-        <li><span class="icon">📊</span><div><strong>Transparent Market Data</strong><br><span style="font-size:0.95rem;opacity:0.8">Independent appraisals, market comparisons, pricing data &mdash; not filtered through a seller's agent.</span></div></li>
+        <li><span class="icon">🗣️</span><div><strong>Work in Your Language</strong><br><span style="font-size:0.95rem;opacity:0.8">Find professionals who speak your language. Navigate foreign markets with confidence.</span></div></li>
+        <li><span class="icon">📊</span><div><strong>Transparent Market Data</strong><br><span style="font-size:0.95rem;opacity:0.8">Independent appraisals, market comparisons, and pricing data to make informed investment decisions.</span></div></li>
       </ul>
     </div>
     <div>
@@ -303,14 +303,13 @@ tr:last-child td{border-bottom:none}
       <div style="font-size:0.85rem;opacity:0.6;margin-top:4px">Trust Layer</div>
     </div>
     <div class="card card-emerald" style="text-align:left">
-      <h3 style="font-size:1.3rem;text-align:center">Buyer Qualification</h3>
+      <h3 style="font-size:1.3rem;text-align:center">Pre-Qualified Buyers</h3>
       <ul class="bullets" style="margin-top:16px">
-        <li><span class="icon">🪪</span> KYC identity verification</li>
-        <li><span class="icon">🏦</span> AML compliance screening</li>
-        <li><span class="icon">💰</span> Proof of funds documentation</li>
-        <li><span class="icon">📍</span> Source of funds verification</li>
+        <li><span class="icon">🪪</span> Identity verification</li>
+        <li><span class="icon">✅</span> Pre-qualified buyer status</li>
         <li><span class="icon">📝</span> Structured offering process</li>
         <li><span class="icon">🎯</span> Investment intent documentation</li>
+        <li><span class="icon">🛡️</span> Verified &amp; ready to transact</li>
       </ul>
     </div>
   </div>
@@ -321,76 +320,65 @@ tr:last-child td{border-bottom:none}
 
 <!-- Slide 10: Language Corridors -->
 <div class="slide slide-white" id="slide-10">
-  <div class="tag tag-dark">Language Corridors</div>
-  <h2 style="color:#065f46">Four languages. Two primary corridors.<br>Built for the real flows of capital.</h2>
-  <div class="grid-2" style="margin-top:16px">
-    <div style="background:#f0fdf4;border-radius:16px;padding:24px;border:1px solid #bbf7d0">
-      <h3 style="color:#059669;font-size:1.2rem">🇺🇸 ↔ 🇲🇽🇨🇷🇨🇴 US–Latin America</h3>
-      <p style="font-size:0.95rem;color:#475569;margin-top:8px"><strong>Languages:</strong> English ↔ Spanish</p>
-      <p style="font-size:0.95rem;color:#475569;margin-top:8px">Mexican nationals are top foreign buyers in US RE. Americans are the #1 foreign buyer group in Mexico. Massive bidirectional capital flow.</p>
-      <ul class="bullets" style="margin-top:12px">
-        <li style="font-size:0.9rem"><span class="icon" style="color:#059669">→</span><span style="color:#334155">LATAM investors → California, Texas, Florida</span></li>
-        <li style="font-size:0.9rem"><span class="icon" style="color:#059669">→</span><span style="color:#334155">US investors → Mexico Pacific, Riviera Maya, Costa Rica</span></li>
-      </ul>
+  <div class="tag tag-dark">Languages</div>
+  <h2 style="color:#065f46">Four languages to cover the majority<br>of global real estate investment.</h2>
+  <div class="grid-4" style="margin-top:40px">
+    <div style="background:#f0fdf4;border-radius:16px;padding:32px;border:1px solid #bbf7d0;text-align:center">
+      <div style="font-size:3rem;margin-bottom:12px">🇺🇸</div>
+      <h3 style="color:#059669;font-size:1.3rem">English</h3>
     </div>
-    <div style="background:#f0fdf4;border-radius:16px;padding:24px;border:1px solid #bbf7d0">
-      <h3 style="color:#059669;font-size:1.2rem">🇺🇸 ↔ 🇨🇳🇹🇼🇭🇰 US–Greater China</h3>
-      <p style="font-size:0.95rem;color:#475569;margin-top:8px"><strong>Languages:</strong> English ↔ Simplified Chinese / Traditional Chinese</p>
-      <p style="font-size:0.95rem;color:#475569;margin-top:8px">Chinese buyers: highest median purchase ($1.2M) of any foreign buyer group. California is #1 destination. Huge demand for trust &amp; verification.</p>
-      <ul class="bullets" style="margin-top:12px">
-        <li style="font-size:0.9rem"><span class="icon" style="color:#059669">→</span><span style="color:#334155">Chinese investors → California, New York, Seattle</span></li>
-        <li style="font-size:0.9rem"><span class="icon" style="color:#059669">→</span><span style="color:#334155">Taiwanese/HK buyers → West Coast metro areas</span></li>
-      </ul>
+    <div style="background:#f0fdf4;border-radius:16px;padding:32px;border:1px solid #bbf7d0;text-align:center">
+      <div style="font-size:3rem;margin-bottom:12px">🇪🇸</div>
+      <h3 style="color:#059669;font-size:1.3rem">Spanish</h3>
+    </div>
+    <div style="background:#f0fdf4;border-radius:16px;padding:32px;border:1px solid #bbf7d0;text-align:center">
+      <div style="font-size:3rem;margin-bottom:12px">🇨🇳</div>
+      <h3 style="color:#059669;font-size:1.3rem">简体中文</h3>
+      <p style="font-size:0.85rem;color:#64748b;margin-top:4px">Simplified Chinese</p>
+    </div>
+    <div style="background:#f0fdf4;border-radius:16px;padding:32px;border:1px solid #bbf7d0;text-align:center">
+      <div style="font-size:3rem;margin-bottom:12px">🇹🇼</div>
+      <h3 style="color:#059669;font-size:1.3rem">繁體中文</h3>
+      <p style="font-size:0.85rem;color:#64748b;margin-top:4px">Traditional Chinese</p>
     </div>
   </div>
-  <div style="margin-top:24px;padding:16px;background:#ecfdf5;border-radius:12px;border:1px solid #a7f3d0;text-align:center">
-    <p style="font-size:1rem;color:#065f46;margin:0">
-      <strong>Why these four languages?</strong> They map to 70%+ of all cross-border residential RE transactions involving the United States. We start where the money flows.
+  <div style="margin-top:40px;text-align:center">
+    <p style="font-size:1.2rem;color:#065f46;margin:0">
+      These four languages cover the <strong>majority of cross-border real estate transactions</strong> globally.
     </p>
   </div>
 </div>
 
-<!-- Slide 11: Competitive Landscape -->
+<!-- Slide 11: Placeholder for Amy's content -->
 <div class="slide slide-dark" id="slide-11">
-  <div class="tag">Competitive Landscape</div>
-  <h2>Everyone lists properties.<br>Nobody builds the trust layer.</h2>
-  <table style="margin-top:16px">
-    <tr><th>Platform</th><th>Model</th><th>Direction</th><th>Trust/Vetting?</th><th>Multilingual?</th></tr>
-    <tr><td>Zillow International</td><td>Listings portal</td><td>US-focused</td><td>❌ None</td><td>❌ English only</td></tr>
-    <tr><td>Juwai.com</td><td>Lead gen for agents</td><td>China → global (one-way)</td><td>❌ Minimal</td><td>Chinese + English</td></tr>
-    <tr><td>Realtor.com International</td><td>Listings aggregator</td><td>Inbound US only</td><td>❌ None</td><td>Limited</td></tr>
-    <tr><td>Global Property Guide</td><td>Content &amp; data</td><td>General info</td><td>❌ None</td><td>English only</td></tr>
-    <tr><td>ListGlobally</td><td>Agent distribution</td><td>Multi-country</td><td>❌ None</td><td>Partial</td></tr>
-    <tr class="highlight-row"><td>DoubleDoor</td><td>Trust marketplace</td><td>Bidirectional</td><td style="color:#10b981">✅ Both sides</td><td style="color:#10b981">✅ EN/ES/ZH</td></tr>
-  </table>
-  <p style="margin-top:24px;text-align:center;font-size:1.1rem;opacity:0.8">
-    Listing portals show you <em>what</em> to buy. DoubleDoor tells you <em>who to trust</em>.
-  </p>
+  <div class="tag">Coming Soon</div>
+  <h2 style="text-align:center">📝 This page is being updated</h2>
+  <p style="text-align:center;margin-top:24px;font-size:1.2rem;opacity:0.7">Amy is providing new content for this slide.</p>
 </div>
 
 <!-- Slide 12: Revenue Model -->
 <div class="slide slide-white" id="slide-12">
   <div class="tag tag-dark">Revenue Model</div>
-  <h2 style="color:#065f46">Three revenue streams.<br>Aligned with transactions.</h2>
-  <div class="grid-3" style="margin-top:20px">
-    <div class="card card-white" style="border-top:4px solid #10b981">
-      <div style="font-size:0.8rem;text-transform:uppercase;color:#10b981;letter-spacing:1px;margin-bottom:8px">Stream 1</div>
-      <h3 style="font-size:1.5rem">Property Listing Fee</h3>
-      <p style="font-size:0.95rem;color:#64748b">Fee to list properties on the marketplace. Properties are verified, geotagged, and presented in multiple languages to qualified international buyers.</p>
+  <h2 style="color:#065f46">Three revenue streams 💰</h2>
+  <div class="grid-3" style="margin-top:32px">
+    <div class="card card-white" style="border-top:4px solid #10b981;text-align:center">
+      <div style="font-size:3rem;margin-bottom:12px">🏠</div>
+      <h3 style="font-size:1.5rem">Listing Fee</h3>
+      <p style="font-size:1rem;color:#64748b;margin-top:8px">Per property listed on marketplace</p>
     </div>
-    <div class="card card-white" style="border-top:4px solid #059669">
-      <div style="font-size:0.8rem;text-transform:uppercase;color:#059669;letter-spacing:1px;margin-bottom:8px">Stream 2</div>
-      <h3 style="font-size:1.5rem">Professional Subscription</h3>
-      <p style="font-size:0.95rem;color:#64748b">Monthly subscription for verified professionals. Includes multilingual profile, verified badge, buyer pipeline access, and review system. Predictable revenue.</p>
+    <div class="card card-white" style="border-top:4px solid #059669;text-align:center">
+      <div style="font-size:3rem;margin-bottom:12px">👤</div>
+      <h3 style="font-size:1.5rem">Pro Subscription</h3>
+      <p style="font-size:1rem;color:#64748b;margin-top:8px">Monthly fee for verified professionals</p>
     </div>
-    <div class="card card-white" style="border-top:4px solid #047857">
-      <div style="font-size:0.8rem;text-transform:uppercase;color:#047857;letter-spacing:1px;margin-bottom:8px">Stream 3</div>
-      <h3 style="font-size:1.5rem">10% Technology Fee</h3>
-      <p style="font-size:0.95rem;color:#64748b">10% of closing cost as a technology and trust infrastructure fee. Covers KYC/AML, escrow verification, structured offering process, and platform facilitation.</p>
+    <div class="card card-white" style="border-top:4px solid #047857;text-align:center">
+      <div style="font-size:3rem;margin-bottom:12px">🤝</div>
+      <h3 style="font-size:1.5rem">10% Tech Fee</h3>
+      <p style="font-size:1rem;color:#64748b;margin-top:8px">Of closing cost for trust infrastructure</p>
     </div>
   </div>
-  <p style="margin-top:24px;text-align:center;color:#64748b;font-size:1rem">
-    💡 Revenue grows with transaction volume. The trust layer creates the moat.
+  <p style="margin-top:32px;text-align:center;color:#059669;font-size:1.2rem">
+    📈 Revenue grows with transactions. Trust creates the moat.
   </p>
 </div>
 
@@ -483,38 +471,8 @@ tr:last-child td{border-bottom:none}
   </div>
 </div>
 
-<!-- Slide 15: Key Metrics -->
-<div class="slide slide-accent" id="slide-15">
-  <div class="tag">Key Metrics</div>
-  <h2>What Success Looks Like</h2>
-  <table style="margin-top:24px">
-    <tr><th>Metric</th><th>Phase 0</th><th>Phase 1</th><th>Phase 2</th><th>Phase 3</th></tr>
-    <tr><td>Verified professionals</td><td>5 (seed)</td><td>30+</td><td>75+</td><td>200+</td></tr>
-    <tr><td>Qualified buyers</td><td>0</td><td>10</td><td>100+</td><td>500+</td></tr>
-    <tr><td>Active listings</td><td>5 (seed)</td><td>20</td><td>100+</td><td>500+</td></tr>
-    <tr><td>Transactions facilitated</td><td>0</td><td>2-3</td><td>15+</td><td>50+</td></tr>
-    <tr><td>Corridors live</td><td>1 (CA inbound)</td><td>1</td><td>2 (+ FL)</td><td>4+ (+ outbound)</td></tr>
-    <tr><td>Languages</td><td>EN + ES</td><td>EN + ES + ZH</td><td>All 4</td><td>All 4 + more</td></tr>
-  </table>
-</div>
-
-<!-- Slide 16: Risks & Mitigations -->
-<div class="slide slide-dark" id="slide-16">
-  <div class="tag">Risks &amp; Mitigations</div>
-  <h2>Eyes Open</h2>
-  <table style="margin-top:24px">
-    <tr><th>Risk</th><th>Level</th><th>Mitigation</th></tr>
-    <tr><td>Regulatory complexity (multi-country)</td><td class="risk-high">High</td><td>Start in US only (well-understood); add countries with local legal counsel</td></tr>
-    <tr><td>KYC/AML cost &amp; friction</td><td class="risk-medium">Medium</td><td>Third-party KYC providers (Persona, Sumsub); bake into listing/tech fee</td></tr>
-    <tr><td>Chicken-and-egg (pros ↔ buyers)</td><td class="risk-medium">Medium</td><td>Supply-first: recruit pros who already serve international clients</td></tr>
-    <tr><td>Incumbent aggregators copy model</td><td class="risk-medium">Medium</td><td>Trust layer is the moat — hard to retrofit onto a listings database</td></tr>
-    <tr><td>Capital controls (China, LATAM)</td><td class="risk-medium">Medium</td><td>Proof-of-funds verification; partner with compliant financial institutions</td></tr>
-    <tr><td>Platform trust failure (bad actor)</td><td class="risk-high">High</td><td>Insurance, dispute resolution, strict verification standards, rapid response</td></tr>
-  </table>
-</div>
-
-<!-- Slide 17: The Vision -->
-<div class="slide slide-emerald" id="slide-17">
+<!-- Slide 15: The Vision -->
+<div class="slide slide-emerald" id="slide-15">
   <div class="tag">The Vision</div>
   <div class="quote" style="margin-top:40px;border-left-color:#a7f3d0">
     "A world where investing in property across borders is as trusted as investing in your own neighborhood."
@@ -539,7 +497,7 @@ tr:last-child td{border-bottom:none}
 </div>
 
 <!-- Slide 18: Next Steps / CTA -->
-<div class="slide slide-cta" id="slide-18">
+<div class="slide slide-cta" id="slide-16">
   <div class="tag" style="background:rgba(255,255,255,0.2)">What's Next</div>
   <h1 style="font-size:3rem">Phase 0 Starts Now</h1>
   <div style="margin-top:32px;text-align:left;max-width:600px">
@@ -562,12 +520,12 @@ tr:last-child td{border-bottom:none}
   <button onclick="prevSlide()">←</button>
   <button onclick="nextSlide()">→</button>
 </div>
-<div class="slide-counter"><span id="current">1</span> / <span id="total">18</span></div>
+<div class="slide-counter"><span id="current">1</span> / <span id="total">16</span></div>
 <div class="deck-footer">DoubleDoor &bull; Method &amp; Apparatus &bull; February 2026</div>
 
 <script>
 let current = 1;
-const total = 18;
+const total = 16;
 
 function showSlide(n) {
   document.querySelectorAll('.slide').forEach(s => s.classList.remove('active'));
